[tool.poetry]
name = "cloudflare_stats"
version = "0.0.2"
description = "Modules and things to interact with Cloudflare Stats"
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pydantic = "^1.10.5"
loguru = "^0.6.0"
click = "^8.1.3"

[tool.poetry.dependencies.splunk-hec]
url = "https://github.com/georgestarcher/Splunk-Class-httpevent/archive/refs/heads/master.tar.gz"

[tool.poetry.dev-dependencies]
pylint-pydantic = "^0.1.7"
pytest = "^7.2.2"
mypy = "^1.0"
types-requests = "^2.28.11"

[tool.poetry.scripts]
cloudflare-analytics = "cloudflare_stats.analytics:cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"

[tool.ruff]
line-length = 200

[tool.pylint.MASTER]
max-line-length = 200
disable = "W0511"
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "cloudflare_stats"
description = ""
license = "MIT"
version = "0.0.1"
authors = [
    { name = "James Hogkinson", email = "james@terminaloutcomes.com" },
]
