[tool.poetry]
name = "cloudflare_stats"
version = "0.0.2"
description = "Modules and things to interact with Cloudflare Stats"
authors = ["James Hogkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pydantic = "^2.9.2"
loguru = "^0.7.2"
click = "^8.1.7"

[tool.poetry.dependencies.splunk-hec]
url = "https://github.com/georgestarcher/Splunk-Class-httpevent/archive/refs/heads/master.tar.gz"

[tool.poetry.dev-dependencies]
pylint-pydantic = "^0.3.2"
pytest = "^8.3.3"
mypy = "^1.11"
types-requests = "^2.32.0"

[tool.poetry.scripts]
cloudflare-analytics = "cloudflare_stats.analytics:cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[tool.ruff]
line-length = 200

[tool.pylint.MASTER]
max-line-length = 200
disable = "W0511"
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cloudflare_stats"
description = ""
license = "MIT"
version = "0.0.1"
authors = [{ name = "James Hogkinson", email = "james@terminaloutcomes.com" }]
