[project]
name = "cloudflare-stats"
version = "0.0.2"
description = "Modules and things to interact with Cloudflare Stats"
authors = [{ name = "James Hogkinson", email = "james@terminaloutcomes.com" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "splunk-hec>=1.11",
]

[project.scripts]
cloudflare-analytics = "cloudflare_stats.analytics:cli"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
line-length = 200

[tool.pylint.MASTER]
max-line-length = 200
disable = "W0511"
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"

[tool.uv.sources]
splunk-hec = { git = "https://github.com/georgestarcher/Splunk-Class-httpevent", rev = "8882db8" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
